@@ -1,5 +1,9 @@
 2003-01-28  Al Riddoch  <alriddoch@zepler.org>
 
+	* src/Terrain.cpp: Fix segment dependencies.
+
+2003-01-28  Al Riddoch  <alriddoch@zepler.org>
+
 	* src/Segment.cpp, src/Segment.h, src/Terrain.cpp: Implement
 	  midpoint based terrain algorithm, currently without any
 	  displacement.
